atualização código JS

--- a/Index.html
+++ b/Index.html
@@ -20,6 +20,7 @@
             <img src="./Assets/images/balanca.png" alt="balança eletrônica" class="imagem-balanca">
 
             <button id="btnCalcula" onclick="mostraCalculo()">Calcular</button>
+            <div class="messageError"></div>
         </section>
                     
     </div>
