adição final das imagens no readme

--- a/Index.html
+++ b/Index.html
@@ -19,7 +19,7 @@
             <input type="number" id="height" placeholder="Altura (cm)">
             <img src="./Assets/images/balanca.png" alt="balança eletrônica" class="imagem-balanca">
 
-            <button id="btnCalcula" onclick="mostraCalculo()">Calcular</button>
+            <button id="btnCalcula" class="button-format" onclick="mostraCalculo()">Calcular</button>
             <div class="messageError"></div>
         </section>
                     
